--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "dustcloud",
+  "name": "bridges",
   "version": "1.0.0",
   "description": "A decentralised social media app to provide community multi-channel chat, moderation tools, threads. Also, solid protocol integration for private messages will be a core feature",
-  "main": "dust-cloud.js",
+  "main": "./dist/bridges.js",
   "scripts": {
     "build": "tsc",
+    "start": "npm run build && electron ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
